fix:prevent path traversal